--- a/src/main/webapp/WEB-INF/templates/jqgrid.html
+++ b/src/main/webapp/WEB-INF/templates/jqgrid.html
@@ -675,7 +675,7 @@
 					rowNum : 100,
 					rowList : [100, 200, 300, 400, 500],
 					pager : '#pjqgrid',
-					sortname : 'id',
+					sortname : 'customerId',
 					toolbarfilter : true,
 					viewrecords : true,
 					sortorder : "asc",
@@ -683,8 +683,9 @@
 						var ids = jQuery("#jqgrid").jqGrid('getDataIDs');
 						for (var i = 0; i < ids.length; i++) {
 							var cl = ids[i];
+							var dataFromTheRow = jQuery('#jqgrid').jqGrid ('getRowData', cl);
 							be = "<button class='btn btn-xs btn-default' data-original-title='Edit Row' onclick=\"jQuery('#jqgrid').editRow('" + cl + "');\"><i class='fa fa-pencil'></i></button>";
-							se = "<button class='btn btn-xs btn-default' data-original-title='Save Row' onclick=\"jQuery('#jqgrid').saveRow('" + cl + "', { extraparam : {customerId : '" + cl +"'}})\"><i class='fa fa-save'></i></button>";
+							se = "<button class='btn btn-xs btn-default' data-original-title='Save Row' onclick=\"jQuery('#jqgrid').saveRow('" + cl + "', { extraparam : {customerId : '" + dataFromTheRow.customerId +"'}})\"><i class='fa fa-save'></i></button>";
 							ca = "<button class='btn btn-xs btn-default' data-original-title='Cancel' onclick=\"jQuery('#jqgrid').restoreRow('" + cl + "');\"><i class='fa fa-times'></i></button>";
 							//ce = "<button class='btn btn-xs btn-default' onclick=\"jQuery('#jqgrid').restoreRow('"+cl+"');\"><i class='fa fa-times'></i></button>";
 							//jQuery("#jqgrid").jqGrid('setRowData',ids[i],{act:be+se+ce});
