Some more fixes

--- a/src/main/webapp/WEB-INF/templates/jqgrid.html
+++ b/src/main/webapp/WEB-INF/templates/jqgrid.html
@@ -439,11 +439,6 @@
 							<table id="jqgrid"></table>
 							<div id="pjqgrid"></div>
 
-							<br>
-							<a href="javascript:void(0)" id="m1">Get Selected id's</a>
-							<br>
-							<a href="javascript:void(0)" id="m1s">Select(Unselect) row 13</a>
-
 						</article>
 						<!-- WIDGET END -->
 
@@ -695,8 +690,8 @@
 						}
 					},
 					editurl : "jqgrid/updateCustomer",
-					caption : "SmartAdmin jQgrid Skin",
-					multiselect : true,
+					caption : "Customer List",
+					multiselect : false,
 					autowidth : true,
 
 				});
